--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,6 @@
     <string name="error_al_capturar_el_pok_mon">Error al capturar el Pokémon.</string>
     <string name="usuario_no_autenticado">Usuario no autenticado.</string>
     <string name="volver">Volver</string>
+    <string name="flecha" translatable="false"><![CDATA[<--]]></string>
 
 </resources>
